# hermes-finance-skills

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TODOS.md  pyproject.toml  resolver.md  resolver.py
config/: conventions.yaml  sector_brackets.yaml
config/sources/: damodaran-2026-01.json  uber-realized-2026-01.json
knowledge/: Equity_Analysis_Runbook_v3.md
skills/: __init__.py  _primitives.py  accountant_artifacts.py  analyst_artifacts.py  audit.py  bundle_validation.py  config.py  control_flow.py  interfaces.py  m1_artifacts.py  m3_artifacts.py  serialization.py  storage.py
skills/data/: __init__.py
skills/provisioning/: SKILL.md  __init__.py  resolver.entry  sector_provisioning.py  test_sector_provisioning.py
skills/research/: __init__.py
skills/synthesis/: __init__.py  current_payload.py  m4b_payload.py
skills/valuation/: __init__.py
specs/: SKILL-template.md  filing-rules.md  mission.md  roadmap.md  tech-stack.md
specs/2026-06-29-scaffold/: plan.md  requirements.md  validation.md
specs/2026-06-29-walking-skeleton/: plan.md  requirements.md  validation.md
specs/2026-06-30-gates-and-routing/: plan.md  requirements.md  validation.md
specs/2026-06-30-m3-3-moat-capalloc/: plan.md  (+2 more)
tests/: m3_fakes.py  test_m0_scaffold.py  test_m2b_resolver.py  test_m3_1_contracts.py  test_m3_2_business_gate.py  test_m3_3_moat_capalloc.py  test_m3_7_ratify_aggregation.py  test_m45_phase3_uber_realized.py  test_m4a_synthesis_boundary.py  test_m4b_synthesis_skills.py  test_m4c_control_flow.py  test_m5_calibration_storage.py  test_multi_ticker_ratify_paths.py
(+184 files in other folders)
