[project]
name = "hermes-finance-skills"
version = "0.1.0"
description = "Portable fundamental analysis skill pack for Hermes and standalone runs."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "PyYAML>=6.0.3",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "skills"]
